Subimos el logo

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,18 @@
   <body>
     <h1>nosotros</h1>
     <ul>
-        <li><a href="index3.html">punto</a></li>
+      <li><a href="index3.html">punto</a></li>
     </ul>
+    <main>
+      <section>
+        <h1>Titulo five</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+          architecto perspiciatis quas neque quidem excepturi fugiat, mollitia
+          aperiam voluptatibus laudantium atque nostrum voluptate magni numquam
+          illo molestiae vel autem exercitationem.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
