--- a/index3.html
+++ b/index3.html
@@ -7,6 +7,20 @@
   </head>
   <body>
     <h1>contacto</h1>
-    <ul><li><a href="index.html">1</a></li></ul>
+    <ul>
+      <li><a href="index.html">home</a></li>
+    </ul>
+    <main>
+      <section>
+        <h1>Titulo hola</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+          architecto perspiciatis quas neque quidem excepturi fugiat, mollitia
+          aperiam voluptatibus laudantium atque nostrum voluptate magni numquam
+          illo molestiae vel autem exercitationem.
+        </p>
+        <header><img src="https://img.freepik.com/vector-gratis/logotipo-ilustrado-personaje-platano-divertido_23-2148721720.jpg?t=st=1714749721~exp=1714753321~hmac=f1127066e25f550094e60457e7214c9b407ac104fada8a523ab46343317966d2&w=826" alt="Logo" height="300px"></header>
+      </section>
+    </main>
   </body>
 </html>
