se hicieron sus ultimas modificaciones

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario</title>
   </head>
+
   <body>
     <h1>Formulario</h1>
 
@@ -39,7 +42,7 @@
       </div>
 
       <div>
-        <label for="gerero">Género:</label>
+        <label for="genero">Género:</label>
         <select id="genero" name="genero" required>
           <option value="">Selecciona un género</option>
           <option value="Masculino">Masculino</option>
