--- a/index2.html
+++ b/index2.html
@@ -7,12 +7,11 @@
 <body>
   <h1>Formulario Con HTML4</h1>
 
-  <form action="submit.php" method="post" enctype="multipart/form-data">
     <label for="name">Nombre:</label>
     <input type="text" id="name" name="name" pattern="[a-zA-Z\s]+" title="Solo se permiten letras y espacios" required>
 
     <div><label for="email">Email:</label>
-      <input type="text" id="email" name="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+      <input type="text" id="email" name="email" pattern="^[a-zA-Z\s@]"
         title="Ingresa un email válido" required>
     </div>
     <label for="age">Edad:</label>
