--- a/index2.html
+++ b/index2.html
@@ -6,12 +6,12 @@
 
 <body>
   <h1>Formulario Con HTML4</h1>
-
+ <form>
     <label for="name">Nombre:</label>
     <input type="text" id="name" name="name" pattern="[a-zA-Z\s]+" title="Solo se permiten letras y espacios" required>
 
     <div><label for="email">Email:</label>
-      <input type="text" id="email" name="email" pattern="^[a-zA-Z\s@]"
+      <input type="text" id="email" name="email" pattern="[a-zA-Z0-9._%+-]+@"
         title="Ingresa un email válido" required>
     </div>
     <label for="age">Edad:</label>
@@ -38,7 +38,7 @@
       <input type="file" id="foto de perfil" name="foto de perfil" required>
       <div>
         <button type="submit">Enviar</button>
-      </div>
+      
   </form>
 </body>
 
